# omx_pick_place

./: .gitignore  README.md  package.xml  setup.py
launch/: pick_place.launch.py
omx_pick_place/: calibration_node.py  color_detector.py  depth_localizer.py  pick_place_node.py  utils.py
resource/: omx_pick_place
src/omx_pick_place/: package.xml  setup.py
src/omx_pick_place/launch/: pick_place.launch.py
src/omx_pick_place/omx_pick_place/: __init__.py  color_detector.py  pick_place_node.py
