<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omx_pick_place</name>
  <version>0.1.0</version>
  <description>Vision-guided pick and place for OpenManipulator-X using RealSense D435</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

